<resources>
    <string name="app_name">LivePlayer</string>
    <string name="hello_world">Hello world!</string>

    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="no_url">No mUrl</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="share_popwind_share">分享</string>
    <string name="share_popwind_weixin">微信</string>
    <string name="share_popwind_wxfriends">朋友圈</string>
    <string name="share_popwind_webo">微博</string>
    <string name="share_popwind_qq">QQ</string>
    <string name="loading_framlayout_hit">加载中...</string>

    <string name="check_login_title">提示</string>
    <string name="check_login_msg">未登录，是否现在登录？</string>
    <string name="check_login_btn_ok">确定</string>
    <string name="check_login_btn_cancel">取消</string>
</resources>
