<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textColor="#767676"
                android:padding="10dp"
                android:text="@string/share_popwind_share"
                android:id="@+id/textView"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/share_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="#adadad"
                    android:drawableTop="@drawable/icon_service_wx"
                    android:text="@string/share_popwind_weixin"/>

                <TextView
                    android:id="@+id/share_wxfriends"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#adadad"
                    android:drawableTop="@drawable/icon_service_friends"
                    android:text="@string/share_popwind_wxfriends"/>

                <TextView
                    android:id="@+id/share_wb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/icon_service_wb"
                    android:text="@string/share_popwind_webo"
                    android:textSize="14sp"
                    android:textColor="#adadad"/>

                <TextView
                    android:id="@+id/share_qq"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#adadad"
                    android:drawableTop="@drawable/icon_service_qq"
                    android:text="@string/share_popwind_qq"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:gravity="center">

                <TextView
                    android:id="@+id/btn_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="取消"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="#f5671b"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>